fix merge conflicts login and forget password add login localization

--- a/lib/core/localization/l10n/app_ar.arb
+++ b/lib/core/localization/l10n/app_ar.arb
@@ -33,5 +33,27 @@
     "passwordLabel": "كلمة المرور الجديدة",
     "@passwordLabel": {},
     "confirmPassowrdLabel": "تأكيد كلمة المرور",
-    "@confirmPassowrdLabel": {}
+    "@confirmPassowrdLabel": {},
+    "loginTitle" : "تسجيل الدخول",
+    "@loginTitle" : {},
+    "rememberMeTitle" : "تذكرني",
+     "@rememberMeTitle" : {},
+     "doNotHaveAccount" : "ليس لديك حساب؟ ",
+     "@doNotHaveAccount" : {},
+     "signUpTitle" : "انشاء حساب",
+     "@signUpTitle" : {},
+     "exploreTabLabel" : "استكشفاف",
+     "@exploreTabLabel" : {},
+     "resultTabLabel" : "النتيجة",
+     "@resultTabLabel" : {},
+     "profileTabLabel" : "الحساب الشخصي",
+     "@profileTabLabel" : {},
+     "successTitle" : "تم بنجاح",
+     "@successTitle" : {},
+     "errorTitle" : "خطأ",
+     "@errorTitle" : {},
+     "ok" : "تم",
+     "@ok" : {},
+     "loadingTitle" : "تحميل",
+     "@loadingTitle" : {}
 }
