--- a/lib/core/localization/l10n/app_en.arb
+++ b/lib/core/localization/l10n/app_en.arb
@@ -34,5 +34,27 @@
      "passwordLabel" : "New password",
      "@passwordLabel": {},
      "confirmPassowrdLabel" : "Confirm password",
-     "@confirmPassowrdLabel": {}
+     "@confirmPassowrdLabel": {},
+     "loginTitle" : "Login",
+     "@loginTitle" : {},
+     "rememberMeTitle" : "Remember Me",
+     "@rememberMeTitle" : {},
+     "doNotHaveAccount" : "Don't have an account? ",
+     "@doNotHaveAccount" : {},
+     "signUpTitle" : "sign Up",
+     "@signUpTitle" : {},
+     "exploreTabLabel" : "Explore",
+     "@exploreTabLabel" : {},
+     "resultTabLabel" : "Result",
+     "@resultTabLabel" : {},
+     "profileTabLabel" : "Profile",
+     "@profileTabLabel" : {},
+     "successTitle" : "Success",
+     "@successTitle" : {},
+     "errorTitle" : "Error",
+     "@errorTitle" : {},
+     "ok" : "OK",
+     "@ok" : {},
+     "loadingTitle" : "Loading...",
+     "@loadingTitle" : {}
 }
