fit : add exam page ui with appbar timer and body without questions

--- a/lib/core/localization/l10n/app_ar.arb
+++ b/lib/core/localization/l10n/app_ar.arb
@@ -55,5 +55,23 @@
      "ok" : "تم",
      "@ok" : {},
      "loadingTitle" : "تحميل",
-     "@loadingTitle" : {}
+     "@loadingTitle" : {},
+     "examTitle" : "الامتحان",
+     "@examTitle" : {},
+     "selectCorrectAnswer" : "اختار الجملة الصحيحة.",
+     "@selectCorrectAnswer" : {},
+     "next" : "التالي",
+     "@next" : {},
+     "back" : "رجوع",
+     "@back" : {},
+     "viewScoreTitle" : "عرض النتيجة",
+     "@viewScoreTitle" : {},
+     "timeOut" : "انتهى الوقت!!",
+     "@timeOut" : {},
+     "questionText" : "سؤال",
+     "@questionText" : {},
+     "ofText" : "من",
+     "@ofText" : {},
+     "finish" : "الانتهاء",
+     "@finish" : {}
 }
