--- a/lib/core/localization/l10n/app_en.arb
+++ b/lib/core/localization/l10n/app_en.arb
@@ -56,5 +56,23 @@
      "ok" : "OK",
      "@ok" : {},
      "loadingTitle" : "Loading...",
-     "@loadingTitle" : {}
+     "@loadingTitle" : {},
+     "examTitle" : "Exam",
+     "@examTitle" : {},
+     "selectCorrectAnswer" : "Select the correctly punctuated sentence.",
+     "@selectCorrectAnswer" : {},
+     "next" : "Next",
+     "@next" : {},
+     "back" : "Back",
+     "@back" : {},
+     "viewScoreTitle" : "View Score",
+     "@viewScoreTitle" : {},
+     "timeOut" : "Time Out!!",
+     "@timeOut" : {},
+     "questionText" : "Questions",
+     "@questionText" : {},
+     "ofText" : "of",
+     "@ofText" : {},
+     "finish" : "Finish",
+     "@finish" : {}
 }
