edit nav bar and add init explore feature

--- a/lib/core/localization/l10n/app_ar.arb
+++ b/lib/core/localization/l10n/app_ar.arb
@@ -55,5 +55,7 @@
      "ok" : "تم",
      "@ok" : {},
      "loadingTitle" : "تحميل",
-     "@loadingTitle" : {}
+     "@loadingTitle" : {},
+     "subjectListTitle" : "تصفح حسب الموضوع",
+     "@subjectListTitle" : {}
 }
