ui & search are done feature is completed

--- a/lib/core/localization/l10n/app_ar.arb
+++ b/lib/core/localization/l10n/app_ar.arb
@@ -57,5 +57,8 @@
      "loadingTitle" : "تحميل",
      "@loadingTitle" : {},
      "subjectListTitle" : "تصفح حسب الموضوع",
-     "@subjectListTitle" : {}
+     "@subjectListTitle" : {},
+     "noSubjectsFound":"لا يوجد نتايج",
+     "@noSubjectsFound":{},"exploreNavigationTitle" : "استكشاف",
+     "@exploreNavigationTitle" : {}
 }
